# perl-file-find-object-rule

./: .hgignore  META.yml  Makefile.PL  Object.pm  README.md
File-Find-Object-Rule/: .tidyallrc  Build.PL  Changes  MANIFEST  META.yml  Makefile.PL  README  dist.ini  findrule
File-Find-Object-Rule-MMagic/: Build.PL  Changes  MANIFEST
File-Find-Object-Rule-MMagic/lib/File/Find/Object/Rule/: MMagic.pm
File-Find-Object-Rule-MMagic/t/: File-Find-Object-Rule-MMagic.t
File-Find-Object-Rule-VCS/: Build.PL  Changes  MANIFEST  MANIFEST.SKIP  META.yml  Makefile.PL  dist.ini
File-Find-Object-Rule-VCS/lib/File/Find/Object/Rule/: VCS.pm
File-Find-Object-Rule-VCS/t/: 01_compile.t
File-Find-Object-Rule/lib/File/Find/Object/: Rule.pm
File-Find-Object-Rule/lib/File/Find/Object/Rule/: Extending.pod
File-Find-Object-Rule/t/: File-Find-Rule.t  findorule.t  findrule.t  style-trailing-space.t
File-FindLines/module/: Build.PL  Changes  MANIFEST  README  ignore.txt
File-FindLines/module/lib/File/: FindLines.pm
File-FindLines/module/lib/File/FindLines/: Result.pm
File-FindLines/module/lib/File/FindLines/Result/: Context.pm  Match.pm  Record.pm
File-FindLines/module/lib/Stream/: Extract.pm
File-FindLines/module/lib/Stream/Extract/: Result.pm
File-FindLines/module/lib/Stream/Extract/Result/: Match.pm
File-FindLines/module/t/: 00-load.t  Find-FileLines.t  boilerplate.t
Stream-Extract/module/: Changes  MANIFEST  README  dist.ini
Stream-Extract/module/lib/Stream/: Extract.pm
Stream-Extract/module/lib/Stream/Extract/: Result.pm
Stream-Extract/module/lib/Stream/Extract/Result/: Context.pm  Match.pm
Stream-Extract/module/t/: Find-FileLines.t
alternative-to-File-Find-document/: Makefile  alternatives-to-File-Find.xml
libfilefind/c_glib_based/: CMakeLists.txt  Makefile.gnu  README  README.asciidoc  TODO.txt  config.h.in  filefind.c  filefind.h  inline.h  minifind.c  run-tests.pl
libfilefind/c_glib_based/t/: 01traverse1.t  valgrind.t
libfilefind/c_glib_based/t/lib/File/Find/Object/: TreeCreate.pm
old-File-Find-Object/: Object.pm  tree
old-File-Find-Object/Object/: internal.pm
old-File-Find-Object/t/: 01ffo.t
